--- a/templates/index1.html
+++ b/templates/index1.html
@@ -248,9 +248,9 @@
           <div class="form-container">
           <form action="/upload_video" method="post" enctype="multipart/form-data">
             <input type="file" name="video_file">
-            <input style="display: none" type="text" id="emp_name" name="text_name"  required /><br>
-            <input style="display: none"  type="text" id="emp_rating" name="text_rating" required />
-            <input style="display: none" type="text" id="emp_sale" name="text_sale" required />           
+            <input  type="text" id="emp_name" name="text_name"  required /><br>
+            <input   type="text" id="emp_rating" name="text_rating" required />
+            <input  type="text" id="emp_sale" name="text_sale" required />           
             <input class="sub" type="submit" value="Upload">
          </form>
           </div>
